fix the wrap of bind pane, fix some bugs of bind

--- a/src/components/bi/scss/bind/bind.scss
+++ b/src/components/bi/scss/bind/bind.scss
@@ -6,7 +6,6 @@
   display: inline-flex;
   align-items: center;
   width: 100%;
-  height: 30px;
   border-style: dotted;
   border-color: #adb5bd;
   border-width: thin;
@@ -15,9 +14,16 @@
   font-family: Microsoft YaHei;
   font-style: normal;
   font-weight: normal;
+  .bind-cols {
+    display: flex;
+    flex-wrap: wrap;
+  }
   .bind-label {
-    width: 40px;
+    width: 60px;
     padding-left: 10px;
+    min-height: 30px;
+    max-height: 70px;
+    line-height: 30px;
   }
   .meaContainer {
     height: 26px;
@@ -26,7 +32,8 @@
     position: relative;
     cursor: pointer;
     background-color: #00c59f;
-    margin-left: 10px;
+    // margin-left: 10px;
+    margin: 3px;
     .dropDownBtn {
       height: 26px;
       line-height: 26px;
@@ -96,7 +103,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    margin-left: 10px;
+    margin: 3px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
